--- a/LaTeX/method.tex
+++ b/LaTeX/method.tex
@@ -1,7 +1,7 @@
 \section{Method}
 
 	\subsection{City generation method}
-	Most related work focus on one of two things: procedurally generating unique building meshes(TODO: ref) or procedurally generating large cities consisting of similar looking buildings\cite{InfiniteCities}. This work focuses instead on the procedurally generated placement of authored meshes in varied districts. The concept of districts breaks up the repetitive and self-similar nature of city by introducing distinct changes in appearance between them. During research three stages of generation were recognized: Districts, Blocks and Buildings. Each of these steps use the result of the previous one as starting point, in a top-down, hierarchical manner. Going through these stages is intended to generate a city that feels and looks natural.
+	Most related work focus on one of two things: procedurally generating unique building meshes(TODO: ref) or procedurally generating large cities consisting of similar looking buildings\cite{InfiniteCities}. This work focuses instead on the procedurally generated placement of existing meshes in varied districts. The concept of districts breaks up the repetitive and self-similar nature of city by introducing distinct changes in appearance between them. During research three stages of generation were recognized: Districts, Blocks and Buildings. Each of these steps use the result of the previous one as starting point, in a top-down, hierarchical manner. Going through these stages is intended to generate a city that feels and looks natural.
 
 		\subsubsection{Districts}
 		The generation process starts with the generation of Districts. A District is an abstract representation of an area of the city. It controls what type of buildings it contains, the minimum and maximum height of these buildings and how densely populated the area is with these buildings. With just these few variables, you can create anything from a sparse industrial district to a dense inner city. The districts have a semi-random deterministic spread across the city. There is no constraints on the distribution of the districts. This means that one seed may produce a city where 90\% is occupied by one district. There are no constraints to prevent this because this would hinder the variability of the cities generated. The districts typically have a lot of blocks where no other districts are competing. But at the borders between districts there is a lot more variation, this is referred to as \textit{border competition}. Here a single block may contain buildings from all three districts. This was done to avoid hard borders between the districts. The hard borders were considered to look strange and may compromise the cities viability in games. The districts were deemed important as they provide variation throughout the city.
@@ -67,7 +67,7 @@
 			\label{fig:map-districts-and-borders}
 		\end{figure}
 		
-		\subsection{Modified Perlin noise}
+		\subsubsection{Modified Perlin noise}
 		Depending on the \textit{frequency} and \textit{modifications} of the noise the results can be very different. The steps at which the data is sampled is what the \textit{frequency} is. If the results of the Perlin noise is changed further this is what \textit{modifications} is.
 		The modified Perlin noise is used when generating the districts. This noise has much sharper changes in values than regular Perlin noise does. Perlin noise without modification returns a value very close to 0.5 most of the time. This pose a problem when generating certain things. The districts core position for example should have some spread across the city and not be close to each nother. The Perlin noise is modified in the following way when generating a districts X-axis position; and used similarly for other parts of the generation:
 		
