--- a/LaTeX/thesis.tex
+++ b/LaTeX/thesis.tex
@@ -1,5 +1,5 @@
 \documentclass[12pt]{article}
-\usepackage[a4paper]{geometry}
+\usepackage[a4paper, left=3cm, right=3cm, top=2.5cm, bottom=2.5cm]{geometry}
 \usepackage{graphicx}
 \usepackage{subcaption}
 
