--- a/LaTeX/citations.bib
+++ b/LaTeX/citations.bib
@@ -16,7 +16,7 @@
 	Bdsk-Url-1 = {https://www.qt.io}}
 
 @book{TexturingModeling,
-	Author = {David S. Ebert},
+	Author = {{David S. Ebert}},
 	Date-Added = {2017-05-10 23:15:15 +0000},
 	Date-Modified = {2017-05-10 23:19:07 +0000},
 	Publisher = {Morgan Kaufman},
@@ -24,7 +24,7 @@
 	Year = {2003}}
 
 @article{TrafficGenerator,
-	Author = {Iria Prieto and Mikel Izal and Daniel Morato},
+	Author = {{Iria Prieto and Mikel Izal and Daniel Morato}},
 	Date-Added = {2017-05-10 20:55:59 +0000},
 	Date-Modified = {2017-05-10 20:59:35 +0000},
 	Journal = {IEEE},
@@ -32,7 +32,7 @@
 	Year = {2012}}
 
 @article{WhatIsPCG,
-	Author = {Togelius, J. and Kastbjerg, E. and Schedl, D. and Yannakakis, G.N.},
+	Author = {{Togelius, J. and Kastbjerg, E. and Schedl, D. and Yannakakis, G.N.}},
 	Date-Added = {2017-05-10 20:54:04 +0000},
 	Date-Modified = {2017-05-10 20:59:48 +0000},
 	Journal = {Proceedings of the 2nd Workshop on Procedural Content Generation in Games},
@@ -40,7 +40,7 @@
 	Year = {2011}}
 
 @article{PCGGames,
-	Author = {Chaker, Noor},
+	Author = {{Chaker, Noor}},
 	Date-Added = {2017-05-10 20:52:30 +0000},
 	Date-Modified = {2017-05-10 20:53:55 +0000},
 	Journal = {?},
@@ -48,7 +48,7 @@
 	Year = {2016}}
 
 @article{PerlinNoise,
-	Author = {Ken Perlin},
+	Author = {{Ken Perlin}},
 	Date-Added = {2017-05-10 20:51:58 +0000},
 	Date-Modified = {2017-05-10 20:52:29 +0000},
 	Journal = {SIGGRAPH '02},
@@ -56,7 +56,7 @@
 	Year = {2002}}
 
 @article{CachingCities,
-	Author = {Brian Cullen and Carrol O'Sullivan},
+	Author = {{Brian Cullen and Carrol O'Sullivan}},
 	Date-Added = {2017-05-10 20:49:45 +0000},
 	Date-Modified = {2017-05-10 20:58:06 +0000},
 	Journal = {?},
@@ -64,7 +64,7 @@
 	Year = {?}}
 
 @article{4DCities,
-	Author = {Basil Weber and Pascal M{\"u}ller and Peter Wonka and Markus Gross},
+	Author = {{Basil Weber and Pascal M{\"u}ller and Peter Wonka and Markus Gross}},
 	Date-Added = {2017-05-10 20:48:36 +0000},
 	Date-Modified = {2017-05-10 20:58:41 +0000},
 	Journal = {Computer Graphics forum},
@@ -72,7 +72,7 @@
 	Year = {?}}
 
 @article{PseudoInfiniteCities,
-	Author = {Stefan Greuter, J. p.},
+	Author = {{Stefan Greuter, Jeremy Parker, Nigel Stewart, Geoff Leach}},
 	Date-Added = {2017-05-10 20:47:51 +0000},
 	Date-Modified = {2017-05-10 20:48:35 +0000},
 	Journal = {Graphite},
@@ -80,7 +80,7 @@
 	Year = {2003}}
 
 @article{ProceduralModeling,
-	Author = {Pascal M{\"u}ller},
+	Author = {{Pascal M{\"u}ller}},
 	Date-Added = {2017-05-10 20:46:41 +0000},
 	Date-Modified = {2017-05-10 20:59:10 +0000},
 	Journal = {SIGGRAPH '01},
@@ -88,7 +88,7 @@
 	Year = {2001}}
 
 @article{ProceduralModeling6,
-	Author = {Pascal M{\"u}ller},
+	Author = {{Pascal M{\"u}ller}},
 	Date-Added = {2017-05-10 20:45:44 +0000},
 	Date-Modified = {2017-05-10 20:59:24 +0000},
 	Journal = {ACM SIGGRAPH},
@@ -104,7 +104,7 @@
 	Year = {2014}}
 
 @article{SquarifiedTreemaps,
-	Author = {Fernando Marson, S. M.},
+	Author = {{Fernando Marson, S. M.}},
 	Date-Added = {2017-05-10 20:42:28 +0000},
 	Date-Modified = {2017-05-10 20:44:16 +0000},
 	Journal = {International Journal of Computer Games Technology},
@@ -112,7 +112,7 @@
 	Year = {2010}}
 
 @article{InverseDesign,
-	Author = {Carlos A. Vanegas},
+	Author = {{Carlos A. Vanegas}},
 	Date-Added = {2017-05-10 20:31:38 +0000},
 	Date-Modified = {2017-05-10 20:33:11 +0000},
 	Journal = {ACM Transactions on Graphics},
@@ -120,47 +120,47 @@
 	Year = {2012}}
 
 @online{NoMansSkyplanets,
-	Author = {No man's sky community},
-	Date = {2017-05-11},
+	Author = {{No man's sky community}},
+	Year = {2017-05-11},
 	Title = {No man's sky planet count},
 	Url = {nomanssky.gamepedia.com/Planet},
 	Bdsk-Url-1 = {nomanssky.gamepedia.com/Planet}}
 
 @misc{NoMansSky,
-	Author = {Hello Games},
-	Date = {2016},
-	Subtitle = {Video Game},
+	Author = {{Hello Games}},
+	Year = {2016},
+	Note = {Video Game},
 	Title = {No Man's Sky}}
 
 @online{BorderlandsWeapons,
-	Author = {Borderlands community},
-	Date = {2017},
+	Author = {{Borderlands community}},
+	Year = {2017},
 	Title = {Weapons in Borderlands},
 	Url = {borderlands.wikia.com/wiki/Weapons},
 	Bdsk-Url-1 = {borderlands.wikia.com/wiki/Weapons}}
 
 @misc{CivilizationCompany,
-	Author = {Firaxis Games},
-	Date = {2005},
-	Subtitle = {Video Games},
+	Author = {{Firaxis Games}},
+	Year = {2005},
+	Note = {Video Games},
 	Title = {Civilization IV}}
 
 @misc{Minecraft,
-	Author = {Mojang},
-	Date = {2011},
-	Subtitle = {Video Game},
+	Author = {{Mojang}},
+	Year = {2011},
+	Note = {Video Game},
 	Title = {Minecraft}}
 
 @misc{Spelunky,
-	Author = {Derek Yu},
-	Date = {2008},
+	Author = {{Derek Yu}},
+	Year = {2008},
 	Date-Modified = {2017-05-11 22:30:28 +0000},
 	Howpublished = {Mossmouth, LLC, Microsoft Studios},
-	Subtitle = {Video Game},
+	Note = {Video Game},
 	Title = {Spelunky}}
 
 @online{MinecraftSize,
-	Author = {Minecraft Community},
+	Author = {{Minecraft Community}},
 	Date = {2017},
 	Date-Modified = {2017-05-11 13:05:30 +0000},
 	Title = {Minecraft size of the world},
@@ -168,36 +168,36 @@
 	Bdsk-Url-1 = {http://minecraft.gamepedia.com/The_Overworld}}
 
 @misc{Borderlands,
-	Author = {Gearbox Software},
-	Date = {2009},
+	Author = {{Gearbox Software}},
+	Year = {2009},
 	Howpublished = {2K Games, Feral Interactive},
-	Subtitle = {Video Game},
+	Note = {Video Game},
 	Title = {Borderlands}}
 
 @misc{Elite,
-	Author = {David Braben and Ian Bell},
-	Date = {1984},
+	Author = {{David Braben and Ian Bell}},
+	Year = {1984},
 	Date-Modified = {2017-05-11 22:29:31 +0000},
 	Howpublished = {Acornsoft, Firebird, Imagineer},
-	Subtitle = {Video Game},
+	Note = {Video Game},
 	Title = {Elite}}
 
 @online{SpeedTree,
-	Author = {SpeedTree},
+	Author = {{SpeedTree}},
 	Date = {2017},
 	Title = {SpeedTree},
 	Url = {http://www.speedtree.com},
 	Bdsk-Url-1 = {http://www.speedtree.com}}
 
 @online{SpeedTreeMovies,
-	Author = {SpeedTree},
+	Author = {{SpeedTree}},
 	Date = {2017},
 	Title = {SpeedTree in movies},
 	Url = {http://www.speedtree.com/idv-company-profile.php},
 	Bdsk-Url-1 = {http://www.speedtree.com/idv-company-profile.php}}
 
 @inproceedings{AutonomousTimeVarying,
-	Author = {M. Honda and K. Mizuno and Y. Fukui},
+	Author = {{M. Honda and K. Mizuno and Y. Fukui}},
 	Booktitle = {booktitle},
 	Date = {2004},
 	Date-Modified = {2017-05-11 22:29:44 +0000},
@@ -205,14 +205,14 @@
 	Title = {Generating autonomous time-varying virtual cities}}
 
 @article{InteractiveProceduralStreet,
-	Author = {Peter Wonka and Pascal Muller and Eugene Zhang},
+	Author = {{Peter Wonka and Pascal Muller and Eugene Zhang}},
 	Date = {2008},
 	Date-Modified = {2017-05-11 22:29:58 +0000},
 	Journaltitle = {ACM SIGGRAPH Article No. 103},
 	Title = {Interactive Procedural Street Modeling}}
 
 @article{AdvancedProceduralModel,
-	Author = {Pascal M{\"u}ller and Michael Schwarz},
+	Author = {{Pascal M{\"u}ller and Michael Schwarz}},
 	Date = {2015},
 	Date-Modified = {2017-05-11 22:29:11 +0000},
 	Journaltitle = {ACM Transactions on Graphics (TOG) - Proceedings of ACM SIGGRAPH},
@@ -220,7 +220,7 @@
 
 @book{QtProgramming,
 	Address = {Sebastopol},
-	Author = {Dalheimer,Matthias K.},
+	Author = {{Dalheimer,Matthias K.}},
 	Edition = {2;2nd;},
 	Isbn = {0596000642;9780596000646;},
 	Keywords = {C++ (Computer program language); Computer programming; Graphical user interfaces (Computer systems); Qt (Electronic resource)},
@@ -230,7 +230,7 @@
 	Year = {2002}}
 
 @book{Win32Programming,
-	Author = {Yuan,Feng},
+	Author = {{Yuan,Feng}},
 	Edition = {First},
 	Isbn = {0130869856;9780130869852;},
 	Keywords = {Graphics; Microsoft; DirectDraw},
