LaTeX - Working on discussion

--- a/LaTeX/discussion.tex
+++ b/LaTeX/discussion.tex
@@ -19,8 +19,25 @@
 	% one-to-one
 	Each cell contains at most one building. The implementation has no support for buildings that span across cells. This means that large buildings like warehouses or hangars are difficult to represent. One way to work around this limitation is to consider each cell as a large space of land. By only using small parts of the cell for small buildings and large parts of the cell for large buildings, it will appear as though there is a difference in size between there cells.
 	% flat terrain
-	Any city is generated on a flat surface. Elicras makes no effort to consider the underlying terrain of the city. This renders our implementation ineffective in games with anything but flat terrain.
+	Any city in our application is generated on a flat surface. Elicras makes no effort to consider the underlying terrain of the city. This renders our implementation ineffective in games with anything but flat terrain.
 	% noise manipulation
-	TODO: Talk about how we use Perlin noise in crazy ways
+	Perlin noise has been used at every stage of the generation process. There are parts of the process where we have shoehorned the noise function into our implementation rather than using it to its full potential. Examples of this is when Elicras determines where to place roads or what sections to use for a building. In these areas Perlin noise is used like a pseudorandom number generator(PRNG). By using it this way, some of the desirable features of Perlin noise are neglected. In these cases, using an actual PRNG like \textit{rand}\cite{RandCRT} might produce similar results, without the implementation overhead. In other cases, the properties of Perlin noise has a visual impact on the result despite being used like a PRNG. An example of this the process of determining whether to place a building or to leave a cell vacant. By checking the noise value against a threshold, buildings are placed in a natural looking way rather than at random.
+	
+	\begin{figure}[h]
+		\begin{subfigure}{0.5\textwidth}
+			\centering
+			\includegraphics[width=0.9\linewidth]{"Images/rand vacant"}
+			\caption{Building placement using \textit{rand}.}
+			\label{fig:rand-vacant}
+		\end{subfigure}
+		\begin{subfigure}{0.5\textwidth}
+			\centering
+			\includegraphics[width=0.9\linewidth]{"Images/perlin vacant"}
+			\caption{Building placement using Perlin noise.}
+			\label{fig:perlin-vacant}
+		\end{subfigure}
+		\caption{Side effect of using Perlin noise like a PRNG.}
+		\label{fig:perlin-rand-vacant}
+	\end{figure}
 	
 	\subsection{City analysis}
