--- a/LaTeX/citations.bib
+++ b/LaTeX/citations.bib
@@ -1,12 +1,18 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Niclas Olsson at 2017-05-12 00:30:28 +0200 
+%% Created for Niclas Olsson at 2017-05-13 09:50:12 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@webpage{RandCRT,
+	Date-Added = {2017-05-13 07:49:26 +0000},
+	Date-Modified = {2017-05-13 07:49:59 +0000},
+	Lastchecked = {2017-05-13},
+	Url = {https://msdn.microsoft.com/en-us/library/398ax69y(v=vs.140).aspx}}
 
 @webpage{QtWebpage,
 	Date-Added = {2017-05-11 13:14:29 +0000},
@@ -121,43 +127,43 @@
 
 @online{NoMansSkyplanets,
 	Author = {{No man's sky community}},
-	Year = {2017-05-11},
 	Title = {No man's sky planet count},
 	Url = {nomanssky.gamepedia.com/Planet},
+	Year = {2017-05-11},
 	Bdsk-Url-1 = {nomanssky.gamepedia.com/Planet}}
 
 @misc{NoMansSky,
 	Author = {{Hello Games}},
-	Year = {2016},
 	Note = {Video Game},
-	Title = {No Man's Sky}}
+	Title = {No Man's Sky},
+	Year = {2016}}
 
 @online{BorderlandsWeapons,
 	Author = {{Borderlands community}},
-	Year = {2017},
 	Title = {Weapons in Borderlands},
 	Url = {borderlands.wikia.com/wiki/Weapons},
+	Year = {2017},
 	Bdsk-Url-1 = {borderlands.wikia.com/wiki/Weapons}}
 
 @misc{CivilizationCompany,
 	Author = {{Firaxis Games}},
-	Year = {2005},
 	Note = {Video Games},
-	Title = {Civilization IV}}
+	Title = {Civilization IV},
+	Year = {2005}}
 
 @misc{Minecraft,
 	Author = {{Mojang}},
-	Year = {2011},
 	Note = {Video Game},
-	Title = {Minecraft}}
+	Title = {Minecraft},
+	Year = {2011}}
 
 @misc{Spelunky,
 	Author = {{Derek Yu}},
-	Year = {2008},
 	Date-Modified = {2017-05-11 22:30:28 +0000},
 	Howpublished = {Mossmouth, LLC, Microsoft Studios},
 	Note = {Video Game},
-	Title = {Spelunky}}
+	Title = {Spelunky},
+	Year = {2008}}
 
 @online{MinecraftSize,
 	Author = {{Minecraft Community}},
@@ -169,18 +175,18 @@
 
 @misc{Borderlands,
 	Author = {{Gearbox Software}},
-	Year = {2009},
 	Howpublished = {2K Games, Feral Interactive},
 	Note = {Video Game},
-	Title = {Borderlands}}
+	Title = {Borderlands},
+	Year = {2009}}
 
 @misc{Elite,
 	Author = {{David Braben and Ian Bell}},
-	Year = {1984},
 	Date-Modified = {2017-05-11 22:29:31 +0000},
 	Howpublished = {Acornsoft, Firebird, Imagineer},
 	Note = {Video Game},
-	Title = {Elite}}
+	Title = {Elite},
+	Year = {1984}}
 
 @online{SpeedTree,
 	Author = {{SpeedTree}},
