LaTeX - Fixing some small stuff

--- a/LaTeX/method.tex
+++ b/LaTeX/method.tex
@@ -21,9 +21,9 @@
 		\par
 		The graphical interface is implemented using Qt\cite{QtWebpage}. Qt is an abstraction layer between its supported platforms and their user interface. Using Qt it is possible to create an application once and deploy it all of its supported platforms, including Windows, OSX and Linux. It abstracts away a lot of low level platform code and provides an easy to use, graphical interface where you can create the graphical interface for you application\cite{Win32Programming}\cite{QtProgramming}.
 		
-		\begin{figure}
+		\begin{figure}[h]
 			\centering
-			\includegraphics[width=0.9\linewidth]{"Images/Qt"}
+			\includegraphics[width=0.7\linewidth]{"Images/Qt"}
 			\caption{Qt Editor}
 			\label{fig:qt-editor}
 		\end{figure}
@@ -31,7 +31,7 @@
 		\par
 		The interface is divided into three sections that are laid out horizontally. The left section is for statistics such as number of buildings in each of the districts, number of roads and the time it took to generate the city. The middle section displays the generated city. The right section of the interface contains controls for altering how the city is generated. There are three parameters per district: minimum height, maximum height and density of buildings. There is also a global parameter called the seed. The seed can alter the look of the city without altering the per-district parameters. When the end user is satisfied with the parameters, they press the 'Generate' button and a city is generated and displayed on the screen.
 		
-		\begin{figure}
+		\begin{figure}[h]
 			\centering
 			\includegraphics[width=0.5\linewidth]{"Images/interface"}
 			\caption{Elicras graphical interface}
